# sclbl-integration-sdk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_all.sh  build_docker.sh
postprocessor-c-example/: CMakeLists.txt  README.md
postprocessor-c-example/src/: main.c  nxai_data_utils.c
postprocessor-c-image-example/: CMakeLists.txt  README.md
postprocessor-c-image-example/src/: data_utils.c  main.c
postprocessor-c-raw-example/: CMakeLists.txt  README.md
postprocessor-c-raw-example/src/: main.c  nxai_data_utils.c
postprocessor-cloud-inference-example/: CMakeLists.txt  README.md  aws_utils.py  plugin.cloud-inference.ini.example  postprocessor-cloud-inference-example.py  requirements.txt
postprocessor-python-clip-example/: CMakeLists.txt  README.md  postprocessor-python-clip-example.py  requirements.txt
postprocessor-python-confidences-example/: CMakeLists.txt  README.md  postprocessor-python-confidences-example.py
postprocessor-python-edgeimpulse-example/: CMakeLists.txt  README.md  plugin.edgeimpulse.ini.example  postprocessor-python-edgeimpulse-example.py  postprocessor-python-edgeimpulse-example.spec  requirements.txt
postprocessor-python-events-example/: CMakeLists.txt  README.md  postprocessor-python-events-example.py
postprocessor-python-example/: CMakeLists.txt  README.md  postprocessor-python-example.py  requirements.txt
postprocessor-python-image-example/: CMakeLists.txt  README.md  postprocessor-python-image-example.py
postprocessor-python-noresponse-example/: CMakeLists.txt  README.md  postprocessor-python-noresponse-example.py
postprocessor-python-settings-example/: CMakeLists.txt  README.md  plugin.settings.ini.example  postprocessor-python-settings-example.py  settings_model.md
postprocessor-python-tracker-example/: CMakeLists.txt  README.md  postprocessor-python-tracker-example.py
preprocessor-python-clip-example/: CMakeLists.txt  README.md  preprocessor-python-clip-example.py  requirements.txt
preprocessor-python-example/: README.md  preprocessor-python-example.py
preprocessor-python-image-example/: CMakeLists.txt  README.md  preprocessor-python-example.py  preprocessor-python-image-example.py  requirements.txt
preprocessor-python-tensor-example/: CMakeLists.txt  README.md  preprocessor-python-tensor-example.py  requirements.txt
sclbl-socket-json-postprocessor-example/: CMakeLists.txt
sclbl-socket-json-postprocessor-example/src/: main.c
socket-json-postprocessor-c-example/: CMakeLists.txt  README.md
socket-json-postprocessor-c-example/src/: main.c
socket-json-postprocessor-c-image-example/: CMakeLists.txt  README.md
socket-json-postprocessor-c-image-example/src/: main.c
socket-json-postprocessor-python-example/: CMakeLists.txt  README.md  main.py  postprocessor-python-example.py
socket-json-postprocessor-python-image-example/: CMakeLists.txt  README.md  postprocessor-python-image-example.py  requirements.txt
socket-msgpack-postprocessor-c-example/: CMakeLists.txt  README.md
socket-msgpack-postprocessor-c-example/src/: main.c
socket-msgpack-postprocessor-python-example/: CMakeLists.txt  README.md  postprocessor-msgpack-python-example.py
